# Langchain-Assistant

./: .env.example  .gitignore  README.md  ana-kod.py  main.py  pyproject.toml
modules/: 1_models.py  2_doc_loader.py  agents.py  chroma.py  doc_loader.py  firebase.py  models.py  retriever.py  text_splitter.py  vectorstore.py
src/: index.html  main.py
src/core/: chroma.py  doc_loader.py  models.py  retriever.py  text_splitter.py  vectorstore.py
vectorstore/chroma_db_with_metadata/: chroma.sqlite3
