[project]
name = "langchain-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf",
    "openai",
    "langchain",
    "chromadb",
    "tiktoken",
    "python-dotenv",
    "langchain-google-genai",
    "google-generativeai",
    "langchain-openai",
    "sentence-transformers",
    "langchain_community",
    "langchain-huggingface",
    "langchain_chroma",
    "firebase-admin"
]
